gcc/testsuite/gdc.test/fail_compilation/diag13609a.d
/*
TEST_OUTPUT:
---
fail_compilation/diag13609a.d(11): Error: `}` expected following members in `class` declaration at fail_compilation/diag13609a.d(8)
---
*/

class C
{
    void foo() {}
